--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Tab Manager for Chrome Dev Docs",
-  "version": "1.0",
+  "name": "Teddy Tabber",
+  "version": "0.1",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -11,6 +11,9 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "host_permissions": ["https://developer.chrome.com/*"],
+  "host_permissions": [
+    "https://*/*",
+    "http://*/*"
+  ],
   "permissions": ["tabGroups"]
 }
