--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "Tab Manager for Chrome Dev Docs",
+  "name": "Teddy Tabber",
   "version": "1.0",
-  "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
-  },
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": ["https://*/*"],
   "action": {
     "default_popup": "popup.html"
-  },
-  "host_permissions": ["https://developer.chrome.com/*"],
-  "permissions": ["tabGroups"]
+  }
 }
