--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,9 @@
   "host_permissions": ["https://*/*"],
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": ["tabs", "activeTab", "storage"]
 }
