--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js"
-  },
-  "permissions": ["tabs", "activeTab", "storage"]
+    "scripts": ["background.js"],
+    "persistent": false
+  }
 }
