--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
   "manifest_version": 3,
-  "name": "Teddy Tabber",
+  "name": "Simple Tab Manager",
   "version": "1.0",
+  "description": "Manage and categorize your open tabs.",
   "permissions": [
-    "tabs",
-    "activeTab",
-    "storage"
+    "tabs"
   ],
-  "host_permissions": ["https://*/*"],
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "images/icon.png"
   }
 }
