--- a/my-modern-app/package.json
+++ b/my-modern-app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
